# modern-cmake-superbuild

./: CMakeLists.txt
cmake/Modules/: SuperBuildDepends.cmake
cmake/depends/: eigen.cmake  fmt.cmake
cmake/externs/: opencv.cmake
cmake/externs/android/: opencv.cmake
cmake/externs/ios/: opencv.cmake
cmake/options/: cpp11.cmake  cpp14.cmake  cpp17.cmake  modern-cpp.cmake
include/core/: core.h
src/core/: core.cpp
utils/: use_core.cpp
